<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">
    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/edit_plainText"
        android:inputType="text"
        android:hint="@string/hint_editText_plain"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/edit_email"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_editText_email"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/edit_number"
        android:inputType="number"
        android:hint="@string/hint_editText_number"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/edit_password"
        android:inputType="textPassword"
        android:hint="@string/hint_editText_password"/>
    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="okButtonPressed"
        android:padding="10dp"
        android:text="@string/button_ok" />

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.3"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="cancelButtonPressed"
        android:padding="10dp"
        android:text="@string/button_cancel" />

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

</LinearLayout>
