<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:id="@+id/slider_layoutRood">
    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.4"/>

    <TextView
        android:id="@+id/slider_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_red"
        android:textColor="@color/red"
        android:textSize="24sp" />
    <SeekBar
        android:id="@+id/seekBar_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.4"/>

    <TextView
        android:id="@+id/slider_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_green"
        android:textColor="@color/green"
        android:textSize="24sp" />
    <SeekBar
        android:id="@+id/seekBar_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.4"/>

    <TextView
        android:id="@+id/slider_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_blue"
        android:textColor="@color/blue"
        android:textSize="24sp" />

    <SeekBar
        android:id="@+id/seekBar_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="okButtonPressed"
            android:text="@string/button_ok" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancelButtonPressed"
            android:text="@string/button_cancel" />
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.5"/>
</LinearLayout>
